testsuite/bad/test_immutable_decorable_2/DecorableType.flux
decorable immutable type DecorableType extends ImmutableType {}